# exceligrade

./: ANDROID_BUILD.md  README.md  Spring 25-26 Grades.xlsx  app.py  build_android.ps1  build_windows.ps1  buildozer.spec  debug_encoding.py  debug_parse.py  gui_app.py  kivy_app.py  pyproject.toml  requirements.txt  run_app.py  sample.txt  test.xlsx  test2.xlsx  test_extract.py  test_final.xlsx  test_new_format.xlsx  test_sheet.py  test_sheet2.py  test_updated.xlsx
static/: app.js  index.html  style.css
