[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exceligrade"
version = "0.1.0"
description = "Convert class syllabi into Excel gradebooks"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
  "flask",
  "openpyxl",
  "pdfminer.six",
  "python-docx"
]
